gl31-master/src/test/deca/lex/valid/hellotest/commentaire_simple.deca
// Description:
//    tests de commentaire simple valide
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 08/01/2021

/* Commentaire simple valide */
